--- a/install/tests/Dockerfile
+++ b/install/tests/Dockerfile
@@ -1,21 +1,32 @@
 # Base OS
-FROM debian
+FROM ubuntu:24.04
 
-# Install requirements
+# Update package list & install some basic tools we'll need.
 RUN apt-get update
-RUN apt-get install -y python3-dev python3-pip python3-venv
-RUN apt-get install -y cmake git
+RUN apt-get install -y python3-dev python3-pip python3-venv wget git
 
-# Create venv to avoid collision between system packages (e.g. numpy) and Cirq's deps.
+# The default version of CMake is 3.28. Get a newer version from Kitware.
+RUN apt remove --purge --auto-remove cmake
+RUN wget https://github.com/Kitware/CMake/releases/download/v3.31.7/cmake-3.31.7-linux-x86_64.sh
+RUN sh cmake-3.31.7-linux-x86_64.sh --prefix=/usr/local --skip-license
+
+# Copy qsim files from the outside-Docker location to an inside-Docker location.
+COPY ./ /qsim/
+WORKDIR /qsim/
+
+# Use venv to avoid collision between system packages (e.g., NumPy) and our deps
 RUN python3 -m venv test_env
 
 # Activate venv.
 ENV PATH="test_env/bin:$PATH"
 
-COPY ./ /qsim/
-RUN pip3 install /qsim/
+# Install dev requirements
+RUN pip3 install -r dev-requirements.txt
 
-# Run test in a non-qsim directory
+# Install qsim from the local sources
+RUN pip3 install .
+
+# Run tests in a non-qsim directory
 COPY ./qsimcirq_tests/ /test-install/
 
 WORKDIR /test-install/
