--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ before-test = "mv {package}/qsimcirq /tmp"
 test-command = "pytest -v {package}/qsimcirq_tests/qsimcirq_test.py && mv /tmp/qsimcirq {package}"
 
 [tool.cibuildwheel.macos]
-before-build = "brew install libomp llvm > /dev/null 2>&1 && brew link --force libomp > /dev/null 2>&1"
+before-build = "brew install libomp llvm@19 > /dev/null 2>&1 && brew link --force libomp > /dev/null 2>&1"
 repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel --verbose --require-archs {delocate_archs} -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.linux]
