--- a/.github/workflows/cirq_compatibility.yml
+++ b/.github/workflows/cirq_compatibility.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Set up Python with caching of pip dependencies
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
-          python-version: '3.11'
+          python-version: '3.12'
           architecture: 'x64'
           cache: pip
           cache-dependency-path: |
@@ -50,12 +50,12 @@ jobs:
             dev-requirements.txt
 
       - name: Install latest dev version of Cirq
-        run: pip3 install --upgrade cirq~=1.0.dev
+        run: pip install --upgrade cirq~=1.0.dev
 
       - name: Install qsim dev requirements
         run: |
-          pip3 install -r requirements.txt
-          pip3 install -r dev-requirements.txt
+          pip install -r requirements.txt
+          pip install -r dev-requirements.txt
 
       - name: Run Python tests
         run: make -j run-py-tests
