--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -86,8 +86,11 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
           python-version: '3.12'
+          arch: ${{matrix.arch}}
           cache: pip
-          cache-dependency-path: requirements.txt
+          cache-dependency-path: |
+            requirements.txt
+            dev-requirements.txt
 
       - if: startsWith(matrix.os, 'macos')
         name: Set cibuildwheel MACOSX_DEPLOYMENT_TARGET value on MacOS
@@ -103,9 +106,8 @@ jobs:
           CIBW_BUILD: ${{matrix.build}}
           CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 2 || ''}}
         run: |
-          python -m pip install -r requirements.txt
-          python -m pip install cibuildwheel==2.23.3 virtualenv==20.31.2 cmake
-          python -m cibuildwheel --output-dir wheelhouse
+          pip install cibuildwheel==2.23.3 virtualenv==20.31.2
+          cibuildwheel --output-dir wheelhouse
 
       - if: inputs.upload != false
         name: Upload wheels to GitHub
