--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@
 skip = "*musllinux*"
 dependency-versions = "latest"
 # Due to package & module name conflict, temporarily move it away to run tests:
-text-extras = "dev"
+test-extras = "dev"
 before-test = "mv {package}/qsimcirq /tmp"
 test-command = "pytest -v {package}/qsimcirq_tests/qsimcirq_test.py && mv /tmp/qsimcirq {package}"
 
