--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -86,7 +86,7 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
           python-version: '3.12'
-          arch: ${{matrix.arch}}
+          architecture: ${{matrix.arch}}
           cache: pip
           cache-dependency-path: |
             requirements.txt
@@ -111,6 +111,7 @@ jobs:
           CIBW_ARCHS: ${{matrix.arch}}
           CIBW_BUILD: ${{matrix.build}}
           CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 2 || ''}}
+          
         run: |
           cibuildwheel --output-dir wheelhouse
 
