--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -53,27 +53,27 @@ jobs:
         include:
           - os: macos-13
             arch: x86_64
-            name: macos-13
+            pyarch: x64
             build: 'cp310* cp311* cp312* cp313*'
 
           - os: macos-14
             arch: arm64
-            name: macos-14
+            pyarch: arm64
             build: 'cp310* cp311* cp312* cp313*'
 
           - os: macos-15
             arch: arm64
-            name: macos-15
+            pyarch: arm64
             build: 'cp310* cp311* cp312* cp313*'
 
           - os: ubuntu-24.04
             arch: x86_64
-            name: manylinux2014
+            pyarch: x64
             build: 'cp310* cp311* cp312* cp313*'
 
           - os: windows-2022
             arch: AMD64
-            name: win
+            pyarch: x64
             # cp13 fails w/ NumPy 1.x. TODO: add cp313* when qsim supports np 2.
             build: 'cp310* cp311* cp312*'
     steps:
@@ -86,7 +86,7 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
           python-version: '3.12'
-          architecture: ${{matrix.arch}}
+          architecture: ${{matrix.pyarch}}
           cache: pip
           cache-dependency-path: |
             requirements.txt
@@ -111,7 +111,6 @@ jobs:
           CIBW_ARCHS: ${{matrix.arch}}
           CIBW_BUILD: ${{matrix.build}}
           CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 2 || ''}}
-          
         run: |
           cibuildwheel --output-dir wheelhouse
 
@@ -119,5 +118,5 @@ jobs:
         name: Upload wheels to GitHub
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
-          name: python-wheels-${{matrix.name}}-${{matrix.arch}}
+          name: python-wheels-${{matrix.os}}-${{matrix.arch}}
           path: ./wheelhouse/*.whl
