--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,12 @@
 # limitations under the License.
 
 [tool.cibuildwheel]
+build-verbosity = 1
 skip = "*musllinux*"
 dependency-versions = "latest"
 # Due to package & module name conflict, temporarily move it away to run tests:
 test-extras = "dev"
-before-test = "mv {package}/qsimcirq /tmp && python -c 'import platform; print(platform.machine())'"
+before-test = "mv {package}/qsimcirq /tmp && echo `python -c 'import platform; print(platform.machine())'`"
 test-command = "pytest -v {package}/qsimcirq_tests/qsimcirq_test.py && mv /tmp/qsimcirq {package}"
 
 [tool.cibuildwheel.macos]
