--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -85,6 +85,7 @@ jobs:
       - name: Set up Python with caching of pip dependencies
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
+          # python-version: '3.12'
           python-version: '3.11'
           architecture: ${{matrix.pyarch}}
           cache: pip
@@ -110,7 +111,8 @@ jobs:
           # Note: additional cibuildwheel settings are in pyproject.toml.
           CIBW_ARCHS: ${{matrix.arch}}
           CIBW_BUILD: ${{matrix.build}}
-          CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 3 || ''}}
+          # CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 3 || ''}}
+          CIBW_BUILD_VERBOSITY: 3
         run: |
           cibuildwheel --output-dir wheelhouse
 
