--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ skip = "*musllinux*"
 dependency-versions = "latest"
 # Due to package & module name conflict, temporarily move it away to run tests:
 test-extras = "dev"
+before-build = "pip install -r dev-requirements.txt"
 before-test = "mv {package}/qsimcirq /tmp"
 test-command = "pytest -v {package}/qsimcirq_tests/qsimcirq_test.py && mv /tmp/qsimcirq {package}"
 
