--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ before-test = "mv {package}/qsimcirq /tmp"
 test-command = "pytest -v {package}/qsimcirq_tests/qsimcirq_test.py && mv /tmp/qsimcirq {package}"
 
 [tool.cibuildwheel.macos]
-before-build = "brew install libomp llvm@19 && brew unlink libomp && brew link --force libomp && ls -l /usr/local"
+before-build = "brew install libomp llvm@19 && brew unlink libomp && brew link --force libomp && ls -l /usr/local/opt"
 repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel --verbose --require-archs {delocate_archs} -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.linux]
