--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -51,31 +51,32 @@ jobs:
         # See the following page for a list of valid cibuildwheel arch values:
         # https://cibuildwheel.pypa.io/en/stable/options/#archs
         include:
-          - os: macos-13
-            arch: x86_64
-            pyarch: x64
-            build: 'cp310* cp311* cp312* cp313*'
+          # - os: macos-13
+          #   arch: x86_64
+          #   pyarch: x64
+          #   build: 'cp310* cp311* cp312* cp313*'
 
-          - os: macos-14
-            arch: arm64
-            pyarch: arm64
-            build: 'cp310* cp311* cp312* cp313*'
+          # - os: macos-14
+          #   arch: arm64
+          #   pyarch: arm64
+          #   build: 'cp310* cp311* cp312* cp313*'
 
           - os: macos-15
             arch: arm64
             pyarch: arm64
-            build: 'cp310* cp311* cp312* cp313*'
+            # build: 'cp310* cp311* cp312* cp313*'
+            build: 'cp312*'
 
-          - os: ubuntu-24.04
-            arch: x86_64
-            pyarch: x64
-            build: 'cp310* cp311* cp312* cp313*'
+          # - os: ubuntu-24.04
+          #   arch: x86_64
+          #   pyarch: x64
+          #   build: 'cp310* cp311* cp312* cp313*'
 
-          - os: windows-2022
-            arch: AMD64
-            pyarch: x64
-            # cp13 fails w/ NumPy 1.x. TODO: add cp313* when qsim supports np 2.
-            build: 'cp310* cp311* cp312*'
+          # - os: windows-2022
+          #   arch: AMD64
+          #   pyarch: x64
+          #   # cp13 fails w/ NumPy 1.x. TODO: add cp313* when qsim supports np 2.
+          #   build: 'cp310* cp311* cp312*'
     steps:
       - name: Check out a copy of the git repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -107,7 +108,7 @@ jobs:
       - name: Build and test wheels
         env:
           # Note: additional cibuildwheel settings are in pyproject.toml.
-          CIBW_ARCHS: '${{matrix.arch}}'
+          CIBW_ARCHS: ${{matrix.arch}}
           CIBW_BUILD: ${{matrix.build}}
           # CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 3 || ''}}
           CIBW_BUILD_VERBOSITY: 2
