--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,17 +17,16 @@ skip = "*musllinux*"
 dependency-versions = "latest"
 # Due to package & module name conflict, temporarily move it away to run tests:
 test-extras = "dev"
-before-build = "pip install -r dev-requirements.txt"
 before-test = "mv {package}/qsimcirq /tmp"
 test-command = "pytest -v {package}/qsimcirq_tests/qsimcirq_test.py && mv /tmp/qsimcirq {package}"
 
 [tool.cibuildwheel.macos]
-before-build = "brew install libomp llvm@19 && brew unlink libomp && brew link --force libomp && ls -l /usr/local/opt/runner && ls -l /usr/local/opt/runner/*"
+before-build = "brew install libomp llvm@19 && brew unlink libomp && brew link --force libomp && ls -l /opt/homebrew/opt/"
 repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel --verbose --require-archs {delocate_archs} -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.linux]
 manylinux-x86_64-image = "manylinux2014"
 manylinux-i686-image = "manylinux2014"
 
-[tool.pytest.ini_options]
-addopts = "-n auto"
+# [tool.pytest.ini_options]
+# addopts = "-n auto"
