--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -51,10 +51,10 @@ jobs:
         # See the following page for a list of valid cibuildwheel arch values:
         # https://cibuildwheel.pypa.io/en/stable/options/#archs
         include:
-          # - os: macos-13
-          #   arch: x86_64
-          #   pyarch: x64
-          #   build: 'cp310* cp311* cp312* cp313*'
+          - os: macos-13
+            arch: x86_64
+            pyarch: x64
+            build: 'cp310* cp311* cp312* cp313*'
 
           # - os: macos-14
           #   arch: arm64
@@ -87,6 +87,7 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
           python-version: '3.12'
+          architecture: '${{matrix.pyarch}}'
           cache: pip
           cache-dependency-path: |
             requirements.txt
@@ -94,9 +95,9 @@ jobs:
 
       - name: Install Python requirements
         run: |
-          python -m pip install -r requirements.txt
-          python -m pip install -r dev-requirements.txt
-          python -m pip install cibuildwheel==2.23.3 virtualenv==20.31.2
+          pip install -r requirements.txt
+          pip install -r dev-requirements.txt
+          pip install cibuildwheel==2.23.3 virtualenv==20.31.2
 
       - if: startsWith(matrix.os, 'macos')
         name: Set cibuildwheel MACOSX_DEPLOYMENT_TARGET value on MacOS
@@ -110,10 +111,10 @@ jobs:
           # Note: additional cibuildwheel settings are in pyproject.toml.
           CIBW_ARCHS: ${{matrix.arch}}
           CIBW_BUILD: ${{matrix.build}}
-          # CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 3 || ''}}
+          # CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 2 || ''}}
           CIBW_BUILD_VERBOSITY: 2
         run: |
-          python -m cibuildwheel --output-dir wheelhouse
+          cibuildwheel --output-dir wheelhouse
 
       - if: inputs.upload != false
         name: Upload wheels to GitHub
