--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependency-versions = "latest"
 # Due to package & module name conflict, temporarily move it away to run tests:
 test-extras = "dev"
 before-test = "mv {package}/qsimcirq /tmp"
-test-command = "pytest -v {package}/qsimcirq_tests/qsimcirq_test.py && mv /tmp/qsimcirq {package}"
+test-command = "pytest -s -v {package}/qsimcirq_tests/qsimcirq_test.py && mv /tmp/qsimcirq {package}"
 
 [tool.cibuildwheel.macos]
 before-build = "brew install libomp llvm@19 && brew unlink libomp && brew link --force libomp && ls -l /opt/homebrew/opt/"
