--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -51,32 +51,35 @@ jobs:
         # See the following page for a list of valid cibuildwheel arch values:
         # https://cibuildwheel.pypa.io/en/stable/options/#archs
         include:
-          - os: macos-13
-            arch: x86_64
-            pyarch: x64
-            build: 'cp310* cp311* cp312* cp313*'
+          # - os: macos-13
+          #   arch: x86_64
+          #   pyarch: x64
+            # build: 'cp310* cp311* cp312* cp313*'
 
-          - os: macos-14
-            arch: arm64
-            pyarch: arm64
-            build: 'cp310* cp311* cp312* cp313*'
+          # - os: macos-14
+          #   arch: arm64
+          #   pyarch: arm64
+            # build: 'cp310* cp311* cp312* cp313*'
 
           - os: macos-15
             arch: arm64
             pyarch: arm64
             # build: 'cp310* cp311* cp312* cp313*'
-            build: 'cp312*'
 
-          - os: ubuntu-24.04
-            arch: x86_64
-            pyarch: x64
-            build: 'cp310* cp311* cp312* cp313*'
+          # - os: ubuntu-24.04
+          #   arch: x86_64
+          #   pyarch: x64
+            # build: 'cp310* cp311* cp312* cp313*'
 
-          - os: windows-2022
-            arch: AMD64
-            pyarch: x64
+          # - os: windows-2022
+          #   arch: AMD64
+          #   pyarch: x64
+
+            # cp13 fails w/ NumPy 1.x. TODO: remove when qsim supports np 2.
+            # skip: 'cp313*'
+
             # cp13 fails w/ NumPy 1.x. TODO: add cp313* when qsim supports np 2.
-            build: 'cp310* cp311* cp312*'
+            # build: 'cp310* cp311* cp312*'
     steps:
       - name: Check out a copy of the git repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -87,7 +90,7 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
           python-version: '3.12'
-          architecture: '${{matrix.pyarch}}'
+          architecture: ${{matrix.pyarch}}
           cache: pip
           cache-dependency-path: |
             requirements.txt
@@ -110,7 +113,10 @@ jobs:
         env:
           # Note: additional cibuildwheel settings are in pyproject.toml.
           CIBW_ARCHS: ${{matrix.arch}}
-          CIBW_BUILD: ${{matrix.build}}
+          # CIBW_BUILD: ${{matrix.build}}
+          # CIBW_BUILD: 'cp310* cp311* cp312* cp313*'
+          CIBW_BUILD: 'cp312*'
+          CIBW_SKIP: ${{matrix.skip}}
           # CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 2 || ''}}
           CIBW_BUILD_VERBOSITY: 2
         run: |
