--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -90,7 +90,7 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
           python-version: '3.12'
-          architecture: ${{matrix.pyarch}}
+          # architecture: ${{matrix.pyarch}}
           cache: pip
           cache-dependency-path: |
             requirements.txt
@@ -114,8 +114,8 @@ jobs:
           # Note: additional cibuildwheel settings are in pyproject.toml.
           CIBW_ARCHS: ${{matrix.arch}}
           # CIBW_BUILD: ${{matrix.build}}
-          CIBW_BUILD: 'cp310* cp311* cp312* cp313*'
-          # CIBW_BUILD: 'cp312*'
+          # CIBW_BUILD: 'cp310* cp311* cp312* cp313*'
+          CIBW_BUILD: 'cp312*'
           CIBW_SKIP: ${{matrix.skip}}
           # CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 2 || ''}}
           CIBW_BUILD_VERBOSITY: 2
