--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -71,9 +71,9 @@ jobs:
           #   pyarch: x64
             # build: 'cp310* cp311* cp312* cp313*'
 
-          # - os: windows-2022
-          #   arch: AMD64
-          #   pyarch: x64
+          - os: windows-2022
+            arch: AMD64
+            pyarch: x64
 
             # cp13 fails w/ NumPy 1.x. TODO: remove when qsim supports np 2.
             # skip: 'cp313*'
