--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -56,9 +56,9 @@ jobs:
             pyarch: x64
             # build: 'cp310* cp311* cp312* cp313*'
 
-          # - os: macos-14
-          #   arch: arm64
-          #   pyarch: arm64
+          - os: macos-14
+            arch: arm64
+            pyarch: arm64
             # build: 'cp310* cp311* cp312* cp313*'
 
           - os: macos-15
@@ -66,9 +66,9 @@ jobs:
             pyarch: arm64
             # build: 'cp310* cp311* cp312* cp313*'
 
-          # - os: ubuntu-24.04
-          #   arch: x86_64
-          #   pyarch: x64
+          - os: ubuntu-24.04
+            arch: x86_64
+            pyarch: x64
             # build: 'cp310* cp311* cp312* cp313*'
 
           - os: windows-2022
@@ -89,7 +89,7 @@ jobs:
       - name: Set up Python with caching of pip dependencies
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
-          python-version: '3.12'
+          # python-version: '3.12'
           # architecture: ${{matrix.pyarch}}
           cache: pip
           cache-dependency-path: |
