--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -90,6 +90,7 @@ jobs:
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
           # python-version: '3.12'
+          python-version: '>=3.10'
           # architecture: ${{matrix.pyarch}}
           cache: pip
           cache-dependency-path: |
@@ -118,7 +119,7 @@ jobs:
           # CIBW_BUILD: 'cp312*'
           CIBW_SKIP: ${{matrix.skip}}
           # CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 2 || ''}}
-          CIBW_BUILD_VERBOSITY: 2
+          CIBW_BUILD_VERBOSITY: 1
         run: |
           cibuildwheel --output-dir wheelhouse
 
