--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -51,25 +51,25 @@ jobs:
         # See the following page for a list of valid cibuildwheel arch values:
         # https://cibuildwheel.pypa.io/en/stable/options/#archs
         include:
-          - os: macos-13
-            arch: x86_64
-            pyarch: x64
-            # build: 'cp310* cp311* cp312* cp313*'
+          # - os: macos-13
+          #   arch: x86_64
+          #   pyarch: x64
+          #   # build: 'cp310* cp311* cp312* cp313*'
 
-          - os: macos-14
-            arch: arm64
-            pyarch: arm64
-            # build: 'cp310* cp311* cp312* cp313*'
+          # - os: macos-14
+          #   arch: arm64
+          #   pyarch: arm64
+          #   # build: 'cp310* cp311* cp312* cp313*'
 
-          - os: macos-15
-            arch: arm64
-            pyarch: arm64
-            # build: 'cp310* cp311* cp312* cp313*'
+          # - os: macos-15
+          #   arch: arm64
+          #   pyarch: arm64
+          #   # build: 'cp310* cp311* cp312* cp313*'
 
-          - os: ubuntu-24.04
-            arch: x86_64
-            pyarch: x64
-            # build: 'cp310* cp311* cp312* cp313*'
+          # - os: ubuntu-24.04
+          #   arch: x86_64
+          #   pyarch: x64
+          #   # build: 'cp310* cp311* cp312* cp313*'
 
           - os: windows-2022
             arch: AMD64
