--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -53,33 +53,24 @@ jobs:
         include:
           # - os: macos-13
           #   arch: x86_64
-          #   pyarch: x64
           #   # build: 'cp310* cp311* cp312* cp313*'
 
           # - os: macos-14
           #   arch: arm64
-          #   pyarch: arm64
           #   # build: 'cp310* cp311* cp312* cp313*'
 
           # - os: macos-15
           #   arch: arm64
-          #   pyarch: arm64
           #   # build: 'cp310* cp311* cp312* cp313*'
 
           # - os: ubuntu-24.04
           #   arch: x86_64
-          #   pyarch: x64
           #   # build: 'cp310* cp311* cp312* cp313*'
 
           - os: windows-2022
             arch: AMD64
-            pyarch: x64
-
             # cp13 fails w/ NumPy 1.x. TODO: remove when qsim supports np 2.
-            # skip: 'cp313*'
-
-            # cp13 fails w/ NumPy 1.x. TODO: add cp313* when qsim supports np 2.
-            # build: 'cp310* cp311* cp312*'
+            skip: 'cp313*'
     steps:
       - name: Check out a copy of the git repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -91,8 +82,7 @@ jobs:
         with:
           # python-version: '3.12'
           # python-version: '>=3.10'
-          # python-version: '3.10'
-          # architecture: ${{matrix.pyarch}}
+          python-version: '3.10'
           cache: pip
           cache-dependency-path: |
             requirements.txt
@@ -120,7 +110,7 @@ jobs:
           # CIBW_BUILD: 'cp312*'
           CIBW_BUILD: 'cp310*'
           CIBW_SKIP: ${{matrix.skip}}
-          # CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 2 || ''}}
+          # CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 1 || ''}}
           CIBW_BUILD_VERBOSITY: 1
         run: |
           cibuildwheel --output-dir wheelhouse
