--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -63,8 +63,8 @@ jobs:
           #   arch: arm64
           #   # build: 'cp310* cp311* cp312* cp313*'
 
-          - os: ubuntu-24.04
-            arch: x86_64
+          # - os: ubuntu-24.04
+          #   arch: x86_64
           #   # build: 'cp310* cp311* cp312* cp313*'
 
           - os: windows-2022
@@ -112,6 +112,8 @@ jobs:
           CIBW_SKIP: ${{matrix.skip}}
           # CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 1 || ''}}
           CIBW_BUILD_VERBOSITY: 1
+          # Don't color the output b/c it makes reading raw logs hard
+          CLICOLOR: 0
         run: |
           cibuildwheel --output-dir wheelhouse
 
