--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -70,6 +70,7 @@ jobs:
           - os: windows-2022
             arch: AMD64
             # cp13 fails w/ NumPy 1.x. TODO: remove when qsim supports np 2.
+            build: "cp310-win_amd64 cp311-win_amd64 cp312-win_amd64"
             skip: 'cp313*'
     steps:
       - name: Check out a copy of the git repository
@@ -82,7 +83,7 @@ jobs:
         with:
           # python-version: '3.12'
           # python-version: '>=3.10'
-          python-version: '3.11'
+          python-version: '3.12'
           cache: pip
           cache-dependency-path: |
             requirements.txt
@@ -92,6 +93,7 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install -r dev-requirements.txt
+          # TODO: try w/o virtualenv
           pip install cibuildwheel==2.23.3 virtualenv==20.31.2
 
       - if: startsWith(matrix.os, 'macos')
@@ -105,10 +107,10 @@ jobs:
         env:
           # Note: additional cibuildwheel settings are in pyproject.toml.
           CIBW_ARCHS: ${{matrix.arch}}
-          # CIBW_BUILD: ${{matrix.build}}
+          CIBW_BUILD: ${{matrix.build}}
           # CIBW_BUILD: 'cp310* cp311* cp312* cp313*'
           # CIBW_BUILD: 'cp312*'
-          CIBW_BUILD: 'cp310*'
+          # CIBW_BUILD: 'cp310*'
           CIBW_SKIP: ${{matrix.skip}}
           # CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 1 || ''}}
           CIBW_BUILD_VERBOSITY: 1
