--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -69,8 +69,8 @@ jobs:
 
           - os: windows-2022
             arch: AMD64
-            # cp13 fails w/ NumPy 1.x. TODO: remove when qsim supports np 2.
             build: "cp310-win_amd64 cp311-win_amd64 cp312-win_amd64"
+            # cp13 fails w/ NumPy 1.x. TODO: remove when qsim supports np 2.
             skip: 'cp313*'
     steps:
       - name: Check out a copy of the git repository
@@ -97,7 +97,7 @@ jobs:
           pip install cibuildwheel==2.23.3 virtualenv==20.31.2
 
       - if: startsWith(matrix.os, 'macos')
-        name: Set cibuildwheel MACOSX_DEPLOYMENT_TARGET value on MacOS
+        name: Set CMake MACOSX_DEPLOYMENT_TARGET value on MacOS
         run: |
           set -x
           os=${{matrix.os}}
@@ -118,7 +118,7 @@ jobs:
           CLICOLOR: 0
           # new var I added to setup.py
           DEBUG: 1
-          CIBW_CMAKE_ARGS_WINDOWS: >-
+          CMAKE_ARGS: >-
             -DPYTHON_EXECUTABLE="{python_executable}"
             -DPYTHON_INCLUDE_DIR="{python_include_dir}"
             -DPYTHON_LIBRARY="{python_library}"
