--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -53,23 +53,18 @@ jobs:
         include:
           - os: macos-13
             arch: x86_64
-            # build: 'cp310* cp311* cp312* cp313*'
 
-          # - os: macos-14
-          #   arch: arm64
-          #   # build: 'cp310* cp311* cp312* cp313*'
+          - os: macos-14
+            arch: arm64
 
           - os: macos-15
             arch: arm64
-            # build: 'cp310* cp311* cp312* cp313*'
 
           - os: ubuntu-24.04
             arch: x86_64
-            # build: 'cp310* cp311* cp312* cp313*'
 
           - os: windows-2022
             arch: AMD64
-            # build: "cp310-win_amd64 cp311-win_amd64 cp312-win_amd64"
             # cp13 fails w/ NumPy 1.x. TODO: remove when qsim supports np 2.
             skip: 'cp313*'
     steps:
@@ -81,8 +76,6 @@ jobs:
       - name: Set up Python with caching of pip dependencies
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
-          # python-version: '3.12'
-          # python-version: '>=3.10'
           python-version: '3.12'
           cache: pip
           cache-dependency-path: |
@@ -93,8 +86,7 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install -r dev-requirements.txt
-          # TODO: try w/o virtualenv
-          pip install cibuildwheel==2.23.3 virtualenv==20.31.2
+          pip install cibuildwheel==2.23.3
 
       - if: startsWith(matrix.os, 'macos')
         name: Set CMake MACOSX_DEPLOYMENT_TARGET value on MacOS
@@ -103,19 +95,29 @@ jobs:
           os=${{matrix.os}}
           echo MACOSX_DEPLOYMENT_TARGET=${os: -2} >> "$GITHUB_ENV"
 
+      - name: Determine number of cores available in this runner
+        run: |
+          shopt -s nocasematch
+          case "$(uname -s)" in
+            linux*)   cores=$(nproc) ;;
+            macos*)   cores=$(sysctl -n hw.ncpu) ;;
+            windows*) cores=$NUMBER_OF_PROCESSORS ;;
+            *)        cores=2
+          esac
+          shopt -u nocasematch
+          echo "num_cores=$cores" >> "$GITHUB_ENV"
+          echo "Will use $cores cores for parallel build."
+
       - name: Build and test wheels
         env:
           # Note: additional cibuildwheel settings are in pyproject.toml.
-          CIBW_ARCHS: ${{matrix.arch}}
-          # CIBW_BUILD: ${{matrix.build}}
           CIBW_BUILD: 'cp310* cp311* cp312* cp313*'
-          # CIBW_BUILD: 'cp312*'
-          # CIBW_BUILD: 'cp310*'
           CIBW_SKIP: ${{matrix.skip}}
+          CIBW_ARCHS: ${{matrix.arch}}
           CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 1 || ''}}
-          # CLICOLOR is recognized by CMake.
+          # Color codes make logs hard to read. (CLICOLOR is used by CMake.)
           CLICOLOR: ${{inputs.verbose && 0 || ''}}
-          DEBUG: 1
+          CMAKE_BUILD_PARALLEL_LEVEL: ${{env.num_cores}}
         run: |
           cibuildwheel --output-dir wheelhouse
 
