--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ before-test = "mv {package}/qsimcirq /tmp"
 test-command = "pytest -s -v {package}/qsimcirq_tests/qsimcirq_test.py && mv /tmp/qsimcirq {package}"
 
 [tool.cibuildwheel.macos]
-before-build = "brew install libomp llvm@19 && brew unlink libomp && brew link --force libomp"
+before-build = "brew install libomp llvm@19 && brew unlink libomp && brew unlink llvm@19 && brew link --force libomp && brew link --force llvm@19"
 repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel --verbose --require-archs {delocate_archs} -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.linux]
