--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,5 @@ repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel --verbose --
 manylinux-x86_64-image = "manylinux2014"
 manylinux-i686-image = "manylinux2014"
 
-# [tool.pytest.ini_options]
-# addopts = "-n auto"
+[tool.pytest.ini_options]
+addopts = "-n auto"
