--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -95,18 +95,15 @@ jobs:
           os=${{matrix.os}}
           echo MACOSX_DEPLOYMENT_TARGET=${os: -2} >> "$GITHUB_ENV"
 
-      - name: Determine number of cores available in this runner
-        run: |
-          shopt -s nocasematch
-          case "$(uname -s)" in
-            linux*)   cores=$(nproc) ;;
-            macos*)   cores=$(sysctl -n hw.ncpu) ;;
-            windows*) cores=$NUMBER_OF_PROCESSORS ;;
-            *)        cores=2
-          esac
-          shopt -u nocasematch
-          echo "num_cores=$cores" >> "$GITHUB_ENV"
-          echo "Will use $cores cores for parallel build."
+      - name: Determine number of cores available in this Linux runner
+        run: echo "num_cores=$(nproc)" >> "$GITHUB_ENV"
+
+      - name: Determine number of cores available in this MacOS runner
+        run: echo "num_cores=$(sysctl -n hw.ncpu)" >> "$GITHUB_ENV"
+
+      - name: Determine number of cores available in this Windows runner
+        shell: bash
+        run: echo "num_cores=$NUMBER_OF_PROCESSORS" >> "$GITHUB_ENV"
 
       - name: Build and test wheels
         env:
